[package]
name = "bryxcoin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2.0", features = ["macros"] }
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0.64"
futures = { version = "0.3.4", default-features = false, features = ["async-await"]}
mongodb = "1.0.0"
actix-web = "3.3.2"
git2 = "0.15.0"